# OpenFace

./: CMakeLists.txt
cmake/: open_face-config-version.cmake.in  open_face-config.cmake.in
exe/FaceLandmarkImg/: CMakeLists.txt  FaceLandmarkImg.cpp
exe/FaceLandmarkVid/: CMakeLists.txt  FaceLandmarkVid.cpp
exe/FaceLandmarkVidMulti/: CMakeLists.txt  FaceLandmarkVidMulti.cpp
exe/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cpp
lib/local/FaceAnalyser/: CMakeLists.txt
lib/local/FaceAnalyser/src/: FaceAnalyser.cpp
lib/local/LandmarkDetector/: CMakeLists.txt
lib/local/LandmarkDetector/src/: LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp
